Corrects the text overflow on the recipe carousel

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -545,7 +545,7 @@ textarea:focus, input:focus {
 
 .carouselItem .recipeSynopsis {
   padding: 10px;
-  font-size: $font150;
+  font-size: $font120;
 }
 
 .carouselItem .recipeMoreLink, .recipesMoreLink {
